# idiff

./: README.md  configure  configure.ac
doc/: Makefile  Makefile.in  autoconf_automake.txt
examples/: Makefile  Makefile.am  Makefile.in  file_new.java  file_old.java
man/: Makefile  Makefile.am  Makefile.in
scripts/: Makefile  Makefile.am  Makefile.in
src/: Makefile.am
